# stock_data_downloader

./: .dockerignore  .gitignore  Dockerfile  package.json  package.json.backup  pyproject.toml  pyproject.toml.backup  pytest.ini  readme.md  reproduce_heston.py  setup.py  temp.ipynb  test_calculate_total_value.py  test_portfolio_fees.py  test_start_prices.py
config_examples/: backtest_config.yml  hyperliquid_config.yml  test_config.yml
stock_data_downloader/: .gitignore  main.py  models.py  run_server.py  sim.py
stock_data_downloader/config/: download_arg_parser.py  logging_config.py  sim_arg_parser.py
stock_data_downloader/data/: sim_ticker_stats.parquet
stock_data_downloader/data_processing/: TickerStats.py  data_downloader.py  simulation.py
stock_data_downloader/data_provider/: AlphaVantageDataProvider.py  BinanceDataProvider.py  DataProvider.py  DataProviderFactory.py  OutlierIdentifier.py  YahooFinanceDataProvider.py  temp.ipynb
stock_data_downloader/etl/: calc_heston_parameters.py  csv_etl.py  fetch_hyperliquid_universe.py  parquet_etl.py  ticker_util.py
stock_data_downloader/websocket_server/: ConfigHandler.py  (+9 more)
tests/: conftest.py  test_TestExchange_randomness.py  test_WebSocketServer.py  test_backtest_datasource.py  test_data_source_factory.py  test_data_sources.py  test_hyperliquid_callback_alignment.py  test_per_client_backtest.py  test_run_server.py  test_server_multi_client_v2.py  test_simulation_end_handling.py  test_stream_processor.py  test_unified_connection_management.py  test_unified_data_sources.py  test_unified_streaming_integration.py
(+38 files in other folders)
