[project]
name = "stock_data_downloader"
version = "0.1"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "yfinance[nospam]",
    "pandas",
    "requests_cache",
    "requests_ratelimiter",
    "pyrate_limiter",
    "ruff",
    "tqdm",
    "scipy",
    "websockets",
    "pyarrow",
    "pytest",
    "ccxt",
    "pytest-cov",
    "pytest-asyncio",
    "hyperliquid-python-sdk (>=0.14.0,<0.15.0)",
    "yaml",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
stock_data_downloader = "stock_data_downloader.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]